--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<!-- Заголовок HTML документа -->
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<!-- Заголовок страницы -->
 		<title>Обработка ПДн</title>
 		<!-- Подключение стороннего документа (стилей) 
@@ -20,7 +21,7 @@
 		</div>
 		<div class="FlexTop">
 			<div class="topic">
-				<img src="img/RKN.svg" height="150px">
+				<img src="img/RKN.svg">
 			</div>
 			<div class="abbreviations">
 				<h4>Сокращения:</h4>
