--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
 			</div>
 			<div id="abbreviations">
 				<h4>Сокращения:</h4>
-				<p onclick="hideShow()"><b>ПДн</b><span class="hide hide1"><b> – персональные данные</b> – любая информация, относящаяся к прямо или косвенно определенному или определяемому физическому лицу (субъекту ПДн)</span></p>
-				<p onclick="hideShow2()"><b>НКЦКИ</b><span class="hide hide2"> – Национальный координационный центр по компьютерным инцидентам</span></p>
+				<p onclick="hideShow()">
+					<span class="abbreviatura abb1"><b>ПДн</b></span>
+					<span class="hide hide1"><b> – персональные данные</b> – любая информация, относящаяся к прямо или косвенно определенному или определяемому физическому лицу (субъекту ПДн)</span>
+				</p>
+				<p onclick="hideShow2()">
+					<span class="abbreviatura abb2"><b>НКЦКИ</b></span>
+					<span class="hide hide2"> – Национальный координационный центр по компьютерным инцидентам</span>
+				</p>
 			</div>		
 		</div>
 		
