--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 				<div id="abbreviations">
 					<h4>Сокращения:</h4>
 					<div class="hideShow">
-						<img alt="Trigger" src="img/plus.svg" id="hideShow1" onclick="hideShow()">
+						<img alt="Trigger" src="img/plus.svg" id="hideShow1" onclick="AbbHideShow()">
 						<div class="hideShowText">
 							<span class="abbreviatura abb1"><b>ПДн</b></span>
 							<span class="hide hide1"><b> – персональные данные</b> – любая информация, относящаяся к прямо или косвенно определенному или определяемому <b>физическому лицу (субъекту ПДн)</b></span>
 						</div>
 					</div>
 					<div class="hideShow">
-						<img alt="Trigger" src="img/plus.svg" id="hideShow2" onclick="hideShow()">
+						<img alt="Trigger" src="img/plus.svg" id="hideShow2" onclick="AbbHideShow()">
 						<div class="hideShowText">
 							<span class="abbreviatura abb2"><b>НКЦКИ</b></span>
 							<span class="hide hide2"> – Национальный координационный центр по компьютерным инцидентам</span>
@@ -52,8 +52,13 @@
 			<article>
 				<div id="new">
 					<img alt="Новая обработка" src="img/new.svg" height="150px"><br>
-					<button>НОВАЯ ОБРАБОТКА ПДн</button>
-					<p>Намерение осуществлять обработку ПДн</p>
+					<button onclick="ArticleHideShow('content new')">НОВАЯ ОБРАБОТКА ПДн</button>
+						<div class="content new">
+							<h3>Намерение осуществлять обработку ПДн</h3>
+							<p>Операторы до начала обработки ПДн должны уведомить Роскомнадзор о своем намерении ее осуществлять 
+							<a href="https://www.consultant.ru/document/cons_doc_LAW_61801/d996966e22e1320c9de1ab82d9f6be12c3d9d765/#dst100162" target="_blank">(ч. 1 ст. 22 ФЗ-152)</a>
+							</p>
+						</div>
 				</div>
 			</article>
 			
@@ -61,16 +66,34 @@
 				<article>
 					<div id="changes">
 						<img alt="Изменения" src="img/changes.svg" height="150px"><br>
-						<button>ИЗМЕНЕНИЯ</button>
-						<p>Уведомление об изменении сведений, содержащихся в уведомлении о намерении осуществлять обработку ПДн</p>
+						<button onclick="ArticleHideShow('content changes')">ИЗМЕНЕНИЯ</button>
+							<div class="content changes">
+								<h3>Уведомление об изменении сведений, содержащихся в уведомлении о намерении осуществлять обработку ПДн</h3>
+								<p>В случае изменения сведений, указанных в поданном ранее уведомлении о намерении осуществлять обработку 
+								ПДн оператор не позднее 15-го числа месяца, следующего за месяцем, в котором возникли такие изменения, 
+								обязан уведомить Роскомнадзор обо всех произошедших за указанный период изменениях 
+								<a href="https://www.consultant.ru/document/cons_doc_LAW_61801/d996966e22e1320c9de1ab82d9f6be12c3d9d765/#dst131" target="_blank">(ч. 7 ст. 22 ФЗ-152)</a>. 
+								Например, если сменился ответственный за организацию обработки ПДн, появилась новая цель обработки, 
+								изменился адрес или местонахождение баз данных.
+								</p>
+							</div>
 					</div>
 				</article>
 				
 				<article>
 					<div id="transfer">
 						<img alt="Передача ПДн за границу" src="img/transfer.svg" height="150px"><br>
-						<button>ПЕРЕДАЧА ПДн <br> ЗА ГРАНИЦУ</button>
-						<p>Намерение осуществлять трансграничную передачу ПДн</p>
+						<button onclick="ArticleHideShow('content transfer')">ПЕРЕДАЧА ПДн <br> ЗА ГРАНИЦУ</button>
+							<div class="content transfer">
+								<h3>Намерение осуществлять трансграничную передачу ПДн</h3>								
+								<div>В соответствии с новыми требованиями, вступившими в силу с 1 марта 2023 года, перед осуществлением трансграничной 
+								передачи ПДн оператор обязан уведомить об этом Роскомнадзор.
+								</div>
+								<div>Указанное уведомление направляется отдельно от 
+								уведомления о намерении осуществлять обработку ПДн в электронном виде через сайт регулятора. 
+								Для отправки данного уведомления предварительно необходимо авторизоваться на портале Госуслуг.
+								</div>								
+							</div>
 					</div>
 				</article>
 			</div>
@@ -78,16 +101,28 @@
 			<article>
 				<div id="crime">
 					<img alt="Нарушения" src="img/crime.svg" height="150px"><br>
-					<button>НАРУШЕНИЯ, ИНЦИДЕНТЫ</button>
-					<p>Уведомление о факте неправомерной или случайной передачи <br>(предоставления, распространения, доступа) ПДн, повлекшей нарушение прав субъектов ПДн</p>
+					<button onclick="ArticleHideShow('content crime')">НАРУШЕНИЯ, ИНЦИДЕНТЫ</button>
+					<div class="content crime">
+						<h3>Уведомление о факте неправомерной или случайной передачи <br>(предоставления, распространения, доступа) ПДн, повлекшей нарушение прав субъектов ПДн</h3>
+						<p>В случае установления факта неправомерной или случайной передачи (предоставления, распространения, доступа) ПДн, 
+						повлекшей нарушение прав субъектов ПДн, операторы обязаны с момента выявления такого инцидента оператором, 
+						уполномоченным органом по защите прав субъектов ПДн или иным заинтересованным лицом, уведомить 
+						Роскомнадзор (ч. 3.1 ст. 21 ФЗ-152):
+						</p>
+					</div>
 				</div>
 			</article>
 			
 			<article>	
 				<div id="cancel">
 					<img alt="Прекращение обработки" src="img/cancel.svg" height="150px"><br>
-					<button>ПРЕКРАЩЕНИЕ ОБРАБОТКИ ПДн</button>
-					<p>Уведомление о прекращении обработки ПДн</p>
+					<button onclick="ArticleHideShow('content cancel')">ПРЕКРАЩЕНИЕ ОБРАБОТКИ ПДн</button>
+					<div class="content cancel">
+						<h3>Уведомление о прекращении обработки ПДн</h3>
+						<p>В случае прекращения обработки ПДн оператор обязан уведомить об этом Роскомнадзор в течение 10 рабочих дней 
+						с даты прекращения обработки ПДн (ч. 7 ст. 22 ФЗ-152).
+						</p>
+					</div>
 				</div>
 			</article>
 			
@@ -96,6 +131,6 @@
 		</section>
 		
 		<script src="script/script.js"></script>
-		<script src="script/test.js"></script>
+		
 	</body>
 </html>
