--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				<article>
 					<div id="transfer">
 						<img alt="Передача ПДн за границу" src="img/transfer.svg" height="150px"><br>
-						<button onclick="ArticleHideShow('content transfer')">ПЕРЕДАЧА ПДн <br> ЗА ГРАНИЦУ</button>
+						<button onclick="ArticleHideShow('content transfer')">ПЕРЕДАЧА ПДн ЗА ГРАНИЦУ</button>
 							<div class="content transfer">
 								<h3>Намерение осуществлять трансграничную передачу ПДн</h3>								
 								<div>В соответствии с новыми требованиями, вступившими в силу с 1 марта 2023 года, перед осуществлением трансграничной 
